--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "asyncpg>=0.30.0",
-    "fastapi[standard]>=0.118.3",
+    "dotenv>=0.9.9",
+    "fastapi>=0.118.3",
     "uvicorn>=0.37.0",
 ]
