--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
     "fastapi>=0.118.3",
+    "httpx>=0.28.1",
     "uvicorn>=0.37.0",
 ]
