--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "dotenv>=0.9.9",
     "fastapi>=0.118.3",
     "httpx>=0.28.1",
+    "pandas>=2.3.3",
     "uvicorn>=0.37.0",
 ]
