--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,7 +29,9 @@ idna==3.10
     #   anyio
     #   httpx
 pydantic==2.12.0
-    # via fastapi
+    # via
+    #   backend (pyproject.toml)
+    #   fastapi
 pydantic-core==2.41.1
     # via pydantic
 python-dotenv==1.1.1
