--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ backend/.venv
 backend/__pycache__
 backend/src/__pycache__
 backend/src/routes/__pycache__
+backend/src/services/__pycache__
 backend/uv.lock
 backend/pyproject.toml
 .env
