--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,6 +32,10 @@ idna==3.11
     # via
     #   anyio
     #   httpx
+jinja2==3.1.6
+    # via new-backend (pyproject.toml)
+markupsafe==3.0.3
+    # via jinja2
 numpy==2.3.4
     # via pandas
 pandas==2.3.3
