--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,36 +2,16 @@ services:
   web:
     build: backend
     ports:
-      - "3000:3000"
-    env_file:
-      - backend/.env
-    depends_on:
-      - cache
+      - "5000:5000"
     volumes:
       - ./backend:/app
-      - sqlite_data:/app
-    extra_hosts:
-      - "host.docker.internal:host-gateway"  # Permite que outros containers o encontrem pelo alias
-
-  cache:
-    image: redis:7
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-
-  frontend:
-    build:
-      context: ./frontend/dashboard
-      dockerfile: Dockerfile
-    ports:
-      - "3001:3001"
-    environment:
-      - NODE_ENV=production
+    
+  ngrok:
+    image: ngrok/ngrok:latest
+    command: "http --url=darling-lenient-meerkat.ngrok-free.app web:5000"
     depends_on:
       - web
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-volumes:
-  redis_data:
-  sqlite_data:
+    environment:
+      - NGROK_AUTHTOKEN=30yRwwHlqsy0D3sfOH7h7qLxw2Q_ZLbbF5z9GGyfw4UPAEXV
+    ports:
+      - "4040:4040"
